Added documentation for remaining endpoints. Simplified json returned by search for all solutions.
